--- a/dist.ini
+++ b/dist.ini
@@ -9,11 +9,11 @@ copyright_year   = 2022
 
 [Prereqs]
 perl = v5.12.0
-Graphics::Toolkit::Color = 1
+; Graphics::Toolkit::Color = 1
 Carp = 1.35
-FindBin = 1
-File::Spec = 3
-File::HomeDir = 1
+;FindBin = 1
+;File::Spec = 3
+; File::HomeDir = 1
 Wx = 0.9
 
 [Prereqs / TestRequires]
@@ -32,8 +32,7 @@ dir = bin
 [Git::GatherDir]
 exclude_filename = Readme.md
 exclude_filename = .cellgraph
-exclude_match = ^examples
-exclude_match = ^img
+exclude_match = ^example
 exclude_match = ^dev
 
 ; use RewriteVersion or VersionFromModule 
