got activity class

--- a/dist.ini
+++ b/dist.ini
@@ -9,11 +9,10 @@ copyright_year   = 2022
 
 [Prereqs]
 perl = v5.12.0
-; Graphics::Toolkit::Color = 1
-Carp = 1.35
 ;FindBin = 1
-;File::Spec = 3
 ; File::HomeDir = 1
+File::Spec = 3
+; Graphics::Toolkit::Color = 1
 Wx = 0.9
 
 [Prereqs / TestRequires]
