--- a/dist.ini
+++ b/dist.ini
@@ -20,6 +20,7 @@ Test::More =  1.3
 
 [MetaNoIndex]
 directory = t
+namespace = App::GUI::Cellgraph
 
 [ExecDir]
 dir = bin
@@ -38,6 +39,7 @@ exclude_match = ^dev
 allow_decimal_underscore = 1
 
 [Repository]
+[PodSyntaxTests]
 [AbstractFromPOD]
 [Pod2Readme]
 [MetaJSON]
