reinstate POD img

--- a/dist.ini
+++ b/dist.ini
@@ -1,18 +1,18 @@
 name    = App-GUI-Cellgraph
-;main_module = 
-;abstract = 
-;version = 
+;main_module =
+;abstract =
+;version =
 author  = Herbert Breunung <lichtkind@cpan.org>
 license = GPL_3
 copyright_holder = Herbert Breunung <lichtkind@cpan.org>
-copyright_year   = 2022
+copyright_year   = 2022-2023
 
 [Prereqs]
 perl = v5.12.0
 ;FindBin = 1
 ; File::HomeDir = 1
 File::Spec = 3
-Graphics::Toolkit::Color = 1
+Graphics::Toolkit::Color = 1.08
 Wx = 0.9
 
 [Prereqs / TestRequires]
@@ -34,8 +34,8 @@ exclude_filename = .cellgraph
 exclude_match = ^example
 exclude_match = ^dev
 
-; use RewriteVersion or VersionFromModule 
-[VersionFromModule] 
+; use RewriteVersion or VersionFromModule
+[VersionFromModule]
 allow_decimal_underscore = 1
 
 [Repository]
