board calculator works now with pattern

--- a/example/norway.ini
+++ b/example/norway.ini
@@ -8,14 +8,14 @@ threshold = 1
   [color]
 
 0 = rgb: 255, 255, 255
-1 = rgb: 0, 0, 0
-2 = rgb: 225, 225, 225
-3 = rgb: 225, 225, 225
-4 = rgb: 225, 225, 225
-5 = rgb: 225, 225, 225
-6 = rgb: 225, 225, 225
-7 = rgb: 225, 225, 225
-8 = rgb: 225, 225, 225
+1 = rgb: 96, 182, 235
+2 = rgb: 147, 109, 26
+3 = rgb: 191, 49, 54
+4 = rgb: 143, 20, 22
+5 = rgb: 153, 21, 139
+6 = rgb: 29, 29, 124
+7 = rgb: 17, 17, 17
+8 = rgb: 0, 0, 0
 delta_L = 0
 delta_S = 0
 dynamics = 1
@@ -23,21 +23,21 @@ dynamics = 1
   [global]
 
 cell_size = 3
-circular_grid = 1
-fill_cells = 
+circular_grid = 0
+fill_cells = 1
 grid_type = lines
 input_size = 3
 paint_direction = top_down
 result_application = insert
-rule_count = 256
-rule_kind = all
+rule_count = 16
+rule_kind = summing
 state_count = 2
-subrule_count = 8
-use_action_rules = 
+subrule_count = 4
+use_action_rules = 0
 
   [rules]
 
-nr = 18
+nr = 5
 
   [start]
 
