fix minor bugs in color tab

--- a/example/sierp.ini
+++ b/example/sierp.ini
@@ -1,9 +1,8 @@
 
   [action]
 
-nr = 22222222
-sum = 0
-threshold = 1
+result_summary = 0.7,0.7,0.7,0.7,0.7,0.7
+spread_summary = 0.3,0.3,0.3,0.3,0.3,0.3
 
   [color]
 
@@ -18,28 +17,33 @@ threshold = 1
 8 = rgb: 225, 225, 225
 delta_L = 0
 delta_S = 0
-dynamics = 1
+dynamic = 1
 
   [global]
 
+action_change = -0.5
+action_spread = 0
+action_threshold = 0.7
 cell_size = 3
-circular_grid = 1
-fill_cells = 
+circular_grid =
+fill_cells = 1
 grid_type = lines
 input_size = 3
 paint_direction = top_down
 result_application = insert
-rule_count = 256
-rule_kind = all
+rule_count = 64
 state_count = 2
-subrule_count = 8
-use_action_rules = 
+subrule_count = 6
+subrule_selection = symmetric
+use_action_rules = 0
 
   [rules]
 
-nr = 18
+nr = 10
 
   [start]
 
-repeat = 0
-value = 1
+action_summary = 5
+repeat_action = 1
+repeat_states = 0
+state_summary = 1
