fixed bug that introduced undefined subrule results

--- a/example/sierp.ini
+++ b/example/sierp.ini
@@ -1,8 +1,8 @@
 
   [action]
 
-result_summary = 0.7,0.7,0.7,0.7,0.7,0.7
-spread_summary = 0.3,0.3,0.3,0.3,0.3,0.3
+result_summary = 0.64,0.64,0.64,0.64,0.64,0.64,0.64,0.64
+spread_summary = 0.2,0.2,0.2,0.2,0.2,0.2,0.2,0.2
 
   [color]
 
@@ -21,25 +21,25 @@ dynamic = 1
 
   [global]
 
-action_change = -0.5
+action_change = -0.6
+action_rules_apply = 
 action_spread = 0
 action_threshold = 0.7
 cell_size = 3
-circular_grid =
 fill_cells = 1
+grid_circular = 1
 grid_type = lines
 input_size = 3
 paint_direction = top_down
 result_application = insert
-rule_count = 64
+rule_count = 256
 state_count = 2
-subrule_count = 6
-subrule_selection = symmetric
-use_action_rules = 0
+subrule_count = 8
+subrule_selection = all
 
   [rules]
 
-nr = 10
+nr = 18
 
   [start]
 
