--- a/example/sierp.ini
+++ b/example/sierp.ini
@@ -1,8 +1,8 @@
 
   [action]
 
-result_summary = 0.64,0.64,0.64,0.64,0.64,0.64,0.64,0.64
-spread_summary = 0.2,0.2,0.2,0.2,0.2,0.2,0.2,0.2
+result_summary = 0.7,0.7,0.7,0.7,0.7,0.7
+spread_summary = 0.3,0.3,0.3,0.3,0.3,0.3
 
   [color]
 
@@ -10,7 +10,7 @@ spread_summary = 0.2,0.2,0.2,0.2,0.2,0.2,0.2,0.2
 1 = rgb: 0, 0, 0
 2 = rgb: 225, 225, 225
 3 = rgb: 225, 225, 225
-4 = rgb: 225, 225, 225
+4 = rgb: 225, 255, 225
 5 = rgb: 225, 225, 225
 6 = rgb: 225, 225, 225
 7 = rgb: 225, 225, 225
@@ -22,7 +22,7 @@ dynamic = 1
   [global]
 
 action_change = -0.6
-action_rules_apply = 
+action_rules_apply = 1
 action_spread = 0
 action_threshold = 0.7
 cell_size = 3
@@ -32,14 +32,14 @@ grid_type = lines
 input_size = 3
 paint_direction = top_down
 result_application = insert
-rule_count = 256
+rule_count = 64
 state_count = 2
-subrule_count = 8
-subrule_selection = all
+subrule_count = 6
+subrule_selection = symmetric
 
   [rules]
 
-nr = 18
+summary = 010000
 
   [start]
 
